<resources>
    <string name="app_name">China</string>


    <string name="datosVendedor">Datos del vendedor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tituloCargarProducto">Nuevo producto</string>
    <string name="hintTituloProducto">Nombre del  Producto</string>
    <string name="hintCantidadBulto">Cantidad por bulto</string>
    <string name="hintPesoBulto">Peso bulto(Kg)</string>
    <string name="hintDescripcion">Descripción del Producto</string>
    <string name="hintAncho">Ancho (mm)</string>
    <string name="hintAlto">Alto (mm)</string>
    <string name="hintProfuncidad">Profundidad (mm)</string>
    <string name="hintPrecioUnitario">Precio Unitario</string>
    <string name="hintMoneda">Divisa</string>
    <string name="hintPrecioBulto">Precio Bulto</string>
    <string name="hintSpinnerMoneda">Divisa</string>
    <string name="hintVendedor">Datos vendedor</string>
    <string name="hintNombreVendedor">Nombre del vendedor</string>
    <string name="hintTelefonoVendedor">Telefono</string>
    <string name="hintObservacionVendedor">Observaciones</string>
    <string name="hintMailVendedor">Mail</string>
    <string name="hintDivisaBulto">Divisa</string>
    <string name="CargarOrden">Guardar y Salir</string>
    <string name="btn_main_verOrden">Ver Productos</string>
    <string name="btn_main_cargarOrden">Cargar nuevo Producto</string>
    <string name="verProdTitulo">Productos Registrados</string>
    <string name="agregarVendedor">Nuevo Vendedor</string>
    <string name="nuevoProducto">Nuevo Producto</string>
    <string name="salir">Volver</string>

    <string-array name="moneda">
        <item>¥ - CNY</item>
        <item>$ - USD</item>
    </string-array>


</resources>
