<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:background="@color/marfil"
    android:layout_height="match_parent"
    tools:context="com.martirio.china.Fragments.FragmentCargarProducto">


    <android.support.design.widget.TextInputLayout
        android:layout_marginLeft="@dimen/margenChico"
        android:layout_marginRight="@dimen/margenChico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textColor="@color/textoOscuro"
            android:hint="@string/hintTituloProducto"
            android:layout_width="match_parent"
            android:textColorHighlight="@color/textoOscuro"
            android:textColorHint="@color/textoOscuro"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.design.widget.CoordinatorLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/altoFrameLayout"
        android:layout_gravity="center_horizontal"
        android:padding="8dp">

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/anchoTarjetaCargarProducto"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="@dimen/elevacionTarjetaCargaProducto">

                <ImageView
                    android:id="@+id/imagenProducto"
                    android:layout_width="@dimen/anchoFotoCargarProducto"
                    android:layout_height="@dimen/altoFotoCargarProducto"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:background="@color/fondoOscuro"
                    android:scaleType="centerCrop" />





            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabImagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="@dimen/margenChico" />

        </android.support.v7.widget.CardView>


    </FrameLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_marginLeft="@dimen/margenChico"
        android:layout_marginRight="@dimen/margenChico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textColor="@color/textoOscuro"
            android:hint="@string/hintDescripcion"
            android:layout_width="match_parent"
            android:textColorHighlight="@color/textoOscuro"
            android:textColorHint="@color/textoOscuro"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="@dimen/margenChico"
            android:layout_marginRight="@dimen/margenChico"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content">
            <EditText
                android:textColor="@color/textoOscuro"
                android:hint="@string/hintAncho"
                android:layout_width="match_parent"
                android:textColorHighlight="@color/textoOscuro"
                android:textColorHint="@color/textoOscuro"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="@dimen/margenChico"
            android:layout_marginRight="@dimen/margenChico"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content">
            <EditText
                android:textColor="@color/textoOscuro"
                android:hint="@string/hintAlto"
                android:layout_width="match_parent"
                android:textColorHighlight="@color/textoOscuro"
                android:textColorHint="@color/textoOscuro"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="@dimen/margenChico"
            android:layout_marginRight="@dimen/margenChico"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content">
            <EditText
                android:textColor="@color/textoOscuro"
                android:hint="@string/hintProfuncidad"
                android:layout_width="match_parent"
                android:textColorHighlight="@color/textoOscuro"
                android:textColorHint="@color/textoOscuro"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_marginLeft="@dimen/margenChico"
        android:layout_marginRight="@dimen/margenChico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textColor="@color/textoOscuro"
            android:hint="@string/hintCantidadBulto"
            android:layout_width="match_parent"
            android:textColorHighlight="@color/textoOscuro"
            android:textColorHint="@color/textoOscuro"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="@dimen/margenChico"
            android:layout_marginRight="@dimen/margenChico"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content">
            <EditText
                android:textColor="@color/textoOscuro"
                android:hint="@string/hintPrecioUnitario"
                android:layout_width="match_parent"
                android:textColorHighlight="@color/textoOscuro"
                android:textColorHint="@color/textoOscuro"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="@dimen/margenChico"
            android:layout_marginRight="@dimen/margenChico"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content">
            <EditText
                android:textColor="@color/textoOscuro"
                android:hint="@string/hintPrecioBulto"
                android:layout_width="match_parent"
                android:textColorHighlight="@color/textoOscuro"
                android:textColorHint="@color/textoOscuro"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="@dimen/margenChico"
            android:layout_marginRight="@dimen/margenChico"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content">
            <EditText
                android:textColor="@color/textoOscuro"
                android:hint="@string/hintMoneda"
                android:layout_width="match_parent"
                android:textColorHighlight="@color/textoOscuro"
                android:textColorHint="@color/textoOscuro"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</LinearLayout>
